@@ -762,6 +762,7 @@ public class VFSBrowser extends JPanel implements EBComponent
 	//{{{ directoryLoaded() method
 	void directoryLoaded(final DefaultMutableTreeNode node,
 		final boolean loadingRoot, final String path,
+		final VFS.DirectoryEntry[] parents,
 		final VFS.DirectoryEntry[] list)
 	{
 		SwingUtilities.invokeLater(new Runnable()
@@ -825,7 +826,7 @@ public class VFSBrowser extends JPanel implements EBComponent
 				}
 
 				browserView.directoryLoaded(node,path,
-					directoryVector);
+					parents,directoryVector);
 
 				// to notify listeners that any existing
 				// selection has been deactivated
