@@ -253,6 +253,12 @@ public class FileVFS extends VFS
 	public DirectoryEntry _getDirectoryEntry(Object session, String path,
 		Component comp)
 	{
+		if(path.equals("/") && OperatingSystem.isUnix())
+		{
+			return new VFS.DirectoryEntry(path,path,path,
+				VFS.DirectoryEntry.DIRECTORY,0L,false);
+		}
+
 		// workaround for Java bug where paths with trailing / return
 		// null getName()
 		if(path.endsWith("/") || path.endsWith(File.separator))
